# cmon

./: cmon.c  cmonpm.c  meson.build
cmon/: cmon_allocator.c  cmon_allocator.h  cmon_argparse.c  cmon_argparse.h  cmon_ast.c  cmon_ast.h  cmon_base.h  cmon_builder_st.c  cmon_builder_st.h  cmon_codegen.c  cmon_codegen.h  cmon_codegen_c.c  cmon_codegen_c.h  cmon_dep_graph.c  cmon_dep_graph.h  cmon_dir_parse.c  cmon_dir_parse.h  cmon_dyn_arr.h  cmon_err_builder.h  cmon_err_handler.c  cmon_err_handler.h  cmon_err_report.c  cmon_err_report.h  cmon_exec.c  cmon_exec.h  cmon_file_sys.c  cmon_file_sys.h  cmon_fs.c  cmon_fs.h  cmon_hashmap.c  cmon_hashmap.h  cmon_idx_buf_mng.c  cmon_idx_buf_mng.h  cmon_ir.c  cmon_ir.h  cmon_lexer.c  cmon_lexer.h  cmon_log.c  cmon_log.h  cmon_modules.c  (+29 more)
test_assets/pm_test01/: cmon_pm_deps.tini
tests/: cmon_tests.c  meson.build
